--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <td height="32"><strong>POR TAMAÑO</strong></td>
   </tr>
   <tr>
-    <td height="30"><strong>PRODUCTOS</strong></td>
+    <td height="30"><strong><a href="catalogo.html">PRODUCTOS</a></strong></td>
   </tr>
   <tr>
     <td height="36"><strong><a href="conocenos.html">CONOCENOS</a></strong></td>
+    
   </tr>
 </table>
 <p><img src="tweter.jpg" width="143" height="99" alt="tweter" longdesc="tweter.jpg" /></p>
