--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <img src="encabezado.png" width="1097" height="63" /><img src="carrito-compra-1024x1024.png" alt="carri" width="151" height="83" longdesc="carrito-compra-1024x1024.png" align="right" />
 <table width="210" border="0">
   <tr>
-    <td height="32"><strong>POR TAMAÑO</strong></td>
+   <td height="32"><strong> <a href="registro.html">REGISTRO</a></strong></td>
   </tr>
   <tr>
     <td height="30"><strong><a href="catalogo.html">PRODUCTOS</a></strong></td>
