--- a/registro.html
+++ b/registro.html
@@ -26,6 +26,10 @@
 <form id="form4" name="form4" method="post" action="">
   <label for="textfield4">CONTRASEÑA</label>
   <input type="text" name="textfield4" id="textfield4" />
+  <form id="form5" name="form5" method="post" action="">
+  registrar
+  <input type="submit" name="button" id="button" value="Enviar" />
+</form>
 </form>
 <p>&nbsp;</p>
 </body>
