--- a/inicio sesi.html
+++ b/inicio sesi.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-<p><img src="../../../../../wamp/www/primera interfas/usuariooo.png" width="163" height="170" alt="usuarioo" longdesc="file:///C|/wamp/www/primera interfas/usuariooo.png" />
-</p>
+<p><img src="usuariooo.png" width="218" height="200" alt="usuarioo" longdesc="usuariooo.png" /></p>
 <form id="form1" name="form1" method="post" action="">
   <label for="textfield">CORREO ELECTRONICO</label>
   <input type="text" name="textfield" id="textfield" />
