--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <body bgcolor= "D8D4D4">
-<img src="encabezado.png" width="1097" height="63" /><img src="carrito-compra-1024x1024.png" alt="carri" width="151" height="83" longdesc="carrito-compra-1024x1024.png" align="right" />
+<img src="encabezado.png" width="1097" height="63" /><a href="carrito de compras.html"><img src="carrito-compra-1024x1024.png" alt="carri" width="151" height="83" longdesc="carrito-compra-1024x1024.png" align="right" /></a> />
 <table width="210" border="0">
   <tr>
    <td height="32"><strong> <a href="registro.html">REGISTRO</a></strong></td>
